--- a/celery_sample/Dockerfile.worker
+++ b/celery_sample/Dockerfile.worker
@@ -1,4 +1,4 @@
-FROM tiangolo/uvicorn-gunicorn-fastapi:python3.8-slim
+FROM python:3.8-slim
 WORKDIR /root
 
 RUN pip install poetry
@@ -7,7 +7,7 @@ RUN pip install poetry
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y libgl1-mesa-dev libglib2.0-0
 
-COPY poetry.lock pyproject.toml ./
+COPY ./celery-app/poetry.lock ./celery-app/pyproject.toml ./
 RUN poetry config virtualenvs.create false \
     && poetry install --no-interaction --no-ansi
-COPY . /app/
+COPY ./celery-app .
